feat(event-creation): implemented CreateEventDTO for right api request and change EventController to work with it, rename all from place to event